# modnum

./: CMakeLists.txt  README.md
include/: Matrix.h  Utils.h  modnum.h
src/: Matrix.cpp  Utils.cpp
test/: PSE.cpp
